--- a/src/App.css
+++ b/src/App.css
@@ -41,11 +41,25 @@ form {
     box-shadow: 0 0 10px #000;
 }
 
+.container{
+    display: flex;
+    width: 95%;
+    margin-top: 10px;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+}
+.todos__heading{
+    font-size: 30px;
+}
 .todos {
     display: flex;
-    justify-content: space-evenly;
     width: 90%;
-    flex-wrap: wrap;
+    flex-direction: column;
+    background-color: rgb(18, 110, 110);
+    padding: 10px;
+
+
 }
 
 .todos__single {
@@ -55,6 +69,11 @@ form {
     padding: 20px;
     margin-top: 15px;
     background-color: yellowgreen;
+    transition: .2s;
+}
+
+.todos__single:hover{
+    transform: scaleX(1.01);
 }
 
 .todos__single--text {
@@ -79,6 +98,19 @@ form {
     font-size: 24px;
 }
 
+.remove{
+    background-color: crimson;
+}
+
+.dragactive{
+    background-color: rgb(0, 221, 236);
+}
+.dragcomplete{
+    background-color: rgb(255, 38, 0);
+}
+.drag{
+    box-shadow: 0 0 20px black;
+}
 @media (max-width: 700px) {
     .input {
         width: 95%;
